--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -10,12 +10,15 @@
   <tbody>
     <% books.each do |book| %>
       <tr>
-        <td><%= link_to(book.user) do %>
-          <%= image_tag book.user.get_profile_image, size:'50x50' %>
+        <td>
+          <%= link_to(book.user) do %>
+          <%= image_tag book.user.get_profile_image, size:"100x100" %>
           <% end %>
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <td>♥<%= book.favorites.count %></td>
+        <td>コメント件数：<%= book.post_comments.count %></td>
       </tr>
     <% end %>
   </tbody>
