--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,12 +15,44 @@
             <%= @book.user.name %>
             <% end %>
           </td>
-          <td><%= link_to @book.title, @book %></td>
-          <td><%= @book.body %></td>
+            <td><%= link_to @book.title, @book %></td>
+            <td><%= @book.body %></td>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+            <td>
+               <% if @book.favorited_by?(current_user) %>
+               <%= link_to book_favorite_path(@book), method: :delete do %>
+               ♥<%= @book.favorites.count %> 
+               <% end %>
+              <% else %>
+               <%= link_to book_favorite_path(@book), method: :post do %>
+               ♡<%= @book.favorites.count %> 
+               <% end %>
+               <% end %>
+            </td>
+            <td>コメント件数：<%= @book.post_comments.count %></td>
+            <td></td>
         </tr>
+        <% @book.post_comments.each do |post_comment| %>
+        <tr>
+            <td>
+                <%= image_tag post_comment.user.get_profile_image,size:"100x100" %><br>
+                <%= post_comment.user.name %> 
+            </td>
+            <td><%= post_comment.comment %></td>
+            <td><% if post_comment.user == current_user %>
+                <%= link_to "Destroy", book_post_comment_path(post_comment.book,post_comment), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%>
+                <% end %>
+            </td>
+        </tr>
+        <% end %>
       </table>
+            <div>
+              <%= form_with model: [@book, @post_comment] do |f| %>
+              <%= f.text_area :comment, rows: '5',cols:'70', placeholder: "コメントをここに" %><br>
+              <%= f.submit "送信する" %>
+              <% end %>
+            </div>
     </div>
   </div>
 </div>
