--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,7 +17,7 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        <td>♥<%= book.favorites.count %></td>
+        <td><%= render 'favorites/favorites',book: book %></td>
         <td>コメント件数：<%= book.post_comments.count %></td>
       </tr>
     <% end %>
